BUGFIX corrected translation-help width and text-overflow

--- a/src/components/edit/TranslatedInput.module.css
+++ b/src/components/edit/TranslatedInput.module.css
@@ -17,6 +17,9 @@
   padding: 0 var(--basis);
   margin: 0 0 0 var(--basis);
   width: calc(100% - var(--basis_x2));
+  max-width: calc(50% - var(--basis_x2));
+  overflow: hidden;
+  word-wrap: break-word;
 }
 
 .changeLocaleButton {
